@@ -39,15 +39,14 @@ title="GUADEC Call For Papers" alt="GUADEC Call For Papers" /></a>
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
 
+<h3><a href="http://www.gnome.org/start/2.18/">GNOME 2.18 Released!</a></h3>
+<p>The GNOME desktop is now faster and easier to configure than ever before.
+Learn more about this release through the <a
+href="http://www.gnome.org/start/2.18/">GNOME 2.18 start page</a> and the
+detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</p>
 <h3><a href="http://www.gnomejournal.org/">The GNOME Journal, March Edition</a></h3>
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
 is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
-
-<h3><a href="http://www.gnome.org/start/2.16/">GNOME 2.16 Released!</a></h3>
-<p>The GNOME desktop is now faster and easier to configure than ever before.
-Learn more about this release through the <a
-href="http://www.gnome.org/start/2.16/">GNOME 2.16 start page</a> and the
-detailed <a href="http://www.gnome.org/start/2.16/notes/C/">release notes</a>.</p>
 
 <h3><a href="http://www.gnome.org/projects/wsop/">Women's Summer Outreach Program 2006</a></h3>
 <p>Following on from GNOME's participation in Google's
