@@ -1,5 +1,10 @@
 2007-03-14  Elijah Newren  <newren gmail com>
 
+	* www.gnome.org/index.html:
+	Mention 2.18 release instead of 2.16 release.
+
+2007-03-14  Elijah Newren  <newren gmail com>
+
 	* www.gnome.org/start/Makefile.am:
 	Have the build system skip building release notes for past releases
 
